--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "924a39b1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'airbnb'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-c180ab4b3dd9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#import of all used libraries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mairbnb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'airbnb'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import of all used libraries\n",
     "import airbnb\n",
@@ -54,26 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "id": "c802f227",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#1) \n",
     "api = airbnb.Api()\n",
     "my_cal = api.get_calendar(18081993)\n",
-    "print(my_cal)\n",
+    "#print(my_cal)\n",
     "#vytvořim si for loop a ke každému datu vytvořím jeden řádek v dataframu\n",
     "\n",
     "\n",
@@ -93,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "id": "fce83dd8",
    "metadata": {},
    "outputs": [
@@ -189,14 +166,14 @@
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "      <td>30</td>\n",
-       "      <td>355</td>\n",
+       "      <td>356</td>\n",
        "      <td>USD</td>\n",
-       "      <td>355</td>\n",
+       "      <td>356</td>\n",
        "      <td>8000</td>\n",
        "      <td>CZK</td>\n",
        "      <td>8000.0</td>\n",
        "      <td>custom</td>\n",
-       "      <td>$355</td>\n",
+       "      <td>$356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -333,7 +310,7 @@
        "0                     889            USD          889                  20000   \n",
        "1                     580            USD          580                  13049   \n",
        "2                     580            USD          580                  13049   \n",
-       "3                     355            USD          355                   8000   \n",
+       "3                     356            USD          356                   8000   \n",
        "4                     400            USD          400                   9000   \n",
        "..                    ...            ...          ...                    ...   \n",
        "436                   572            USD          578                  12870   \n",
@@ -346,7 +323,7 @@
        "0               CZK       20000.0  custom                  $889  \n",
        "1               CZK       13049.0  custom                  $580  \n",
        "2               CZK       13049.0  custom                  $580  \n",
-       "3               CZK        8000.0  custom                  $355  \n",
+       "3               CZK        8000.0  custom                  $356  \n",
        "4               CZK        9000.0  custom                  $400  \n",
        "..              ...           ...     ...                   ...  \n",
        "436             CZK       13000.0  custom                  $572  \n",
@@ -358,7 +335,7 @@
        "[441 rows x 13 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "id": "81995c20",
    "metadata": {},
    "outputs": [],
@@ -564,8 +541,8 @@
     "            df = pd.DataFrame(to_DF)\n",
     "            df[\"date\"] = pd.to_datetime(df.date)  \n",
     "            \n",
-    "            after_start_date = df[\"date\"] >= start_date\n",
-    "            before_end_date = df[\"date\"] <= end_date\n",
+    "            after_start_date = df[\"date\"] >= self.start_date\n",
+    "            before_end_date = df[\"date\"] <= self.end_date\n",
     "            \n",
     "            between_two_dates = after_start_date & before_end_date\n",
     "            filtered_dates = df.loc[between_two_dates]\n",
@@ -578,7 +555,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
+   "id": "5f0df322-a9e8-4b0e-8a9c-ee577dd33a08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "9f53524f",
    "metadata": {},
    "outputs": [
@@ -586,18 +571,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "price of 18081993 for given dates is 3830\n",
-      "price of 24542681 for given dates is 5745\n"
+      "price of 18081993 for given dates is 23496\n",
+      "price of 49622525 for given dates is 27412\n"
      ]
     }
    ],
    "source": [
     "pavel = client()\n",
-    "pavel.IDs = [\"18081993\",\"24542681\"]\n",
-    "pavel.start_date = \"2021-11-29\"\n",
-    "pavel.end_date = \"2021-11-29\"\n",
+    "pavel.IDs = [\"18081993\",\"49622525\"]\n",
+    "pavel.start_date = \"2021-12-15\"\n",
+    "pavel.end_date = \"2021-12-20\"\n",
     "pavel.getprices()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e3bf497-0e03-4f85-9567-0ebcadcef971",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ff23311-0db3-48ec-847b-facbb79b880a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -634,6 +635,14 @@
     "print (summ) \n",
     "  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a79e9008-30b0-4816-b0e4-3d40e58f7186",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
