--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -644,12 +644,14 @@
    "id": "a79e9008-30b0-4816-b0e4-3d40e58f7186",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Pavlova poslední úprava\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -663,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
